Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49692

QtQuick Canvas Canvas.Cooperative with Canvas.FramebufferObject crashes

XMLWordPrintable

    • 40a80ec9d712d8c40ebd6a6373322c3332ff5b50

      To reproduce the problem run the following code:

      import QtQuick 2.5
      import QtQuick.Window 2.2
      
      Window {
          id: win
          visible: true
          width: 200
          height: 200
      
          Canvas {
              id: canvas
              width: 100
              height: 100
              contextType: "2d"
              renderStrategy: Canvas.Cooperative
              renderTarget: Canvas.FramebufferObject
          }
      }
      

      On linux it works on Win7 it crashes, changing the renderStrategy or renderTarget makes it work, also setting the SG render loop to basic.

        1. QTBUG-49692.zip
          3 kB
        2. backtrace.txt
          23 kB
        For Gerrit Dashboard: QTBUG-49692
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes